Add first address nickname of (home)

--- a/app/views/users/_profile.erb
+++ b/app/views/users/_profile.erb
@@ -6,12 +6,22 @@
   <p>Role: <%= @user.role %></p>
   <aside id="address-details">
     <h3>Address:</h3>
+    <% if @user.address.first %>
+      (home)
+      <p><%= @user.address %></p>
+      <p>
+        <%= @user.city %>,
+        <%= @user.state %>
+        <%= @user.zip %>
+      </p>
+      <% else %>
     <p><%= @user.address %></p>
     <p>
       <%= @user.city %>,
       <%= @user.state %>
       <%= @user.zip %>
     </p>
+    <% end %>
   </aside>
   <p><%= link_to 'Edit Profile Data', edit_profile_path unless current_admin? %></p>
 </section>
