Adds one to many relationship between user and addresses

--- a/app/views/users/_profile.erb
+++ b/app/views/users/_profile.erb
@@ -6,7 +6,7 @@
   <p>Role: <%= @user.role %></p>
   <aside id="address-details">
     <h3>Address:</h3>
-    <p><%= @user.address.nickname %></p>
+    <p><%= @address.nickname %></p>
       <p><%= @user.address %></p>
       <p>
         <%= @user.city %>,
