--- a/app/views/users/_profile.erb
+++ b/app/views/users/_profile.erb
@@ -6,6 +6,7 @@
   <p>Role: <%= @user.role %></p>
   <aside id="address-details">
     <h3>Address:</h3>
+    <h5> <%= @user.address_nickname %>
       <p><%= @user.address %></p>
       <p>
         <%= @user.city %>,
