--- a/app/views/users/_profile.erb
+++ b/app/views/users/_profile.erb
@@ -6,13 +6,14 @@
   <p>Role: <%= @user.role %></p>
   <aside id="address-details">
     <h3>Address:</h3>
-    <h5> <%= @user.address_nickname %>
       <p><%= @user.address %></p>
       <p>
         <%= @user.city %>,
         <%= @user.state %>
         <%= @user.zip %>
+        <%= @user.address_nickname %>
       </p>
+      <p><%= link_to 'Edit Addresses', edit_address_path(@address) unless current_admin? %></p>
   </aside>
   <p><%= link_to 'Edit Profile Data', edit_profile_path unless current_admin? %></p>
 </section>
