--- a/app/views/users/_profile.erb
+++ b/app/views/users/_profile.erb
@@ -13,7 +13,7 @@
         <%= @user.zip %>
         <%= @user.address_nickname %>
       </p>
-      <p><%= link_to 'Edit Addresses', edit_address_path(@address) unless current_admin? %></p>
+      <p><%= link_to 'Edit Addresses', edit_address_path unless current_admin? %></p>
   </aside>
   <p><%= link_to 'Edit Profile Data', edit_profile_path unless current_admin? %></p>
 </section>
