--- a/app/views/users/_form.erb
+++ b/app/views/users/_form.erb
@@ -5,26 +5,6 @@
 </p>
 
 <p>
-  <%= f.label :address  %>:
-  <%= f.text_field :address %>
-</p>
-
-<p>
-  <%= f.label :city %>:
-  <%= f.text_field :city %>
-</p>
-
-<p>
-  <%= f.label :state %>:
-  <%= f.text_field :state %>
-</p>
-
-<p>
-  <%= f.label :zip %>:
-  <%= f.text_field :zip %>
-</p>
-
-<p>
   <%= f.label :email %>:
   <%= f.text_field :email %>
 </p>
@@ -38,7 +18,20 @@
   <%= f.label :password_confirmation %>:
   <%= f.password_field :password_confirmation %>
 </p>
+  <%= f.fields_for :addresses do |address| %>
+    <%= address.label :address %>:
+    <%= address.text_field :address %>
 
+    <%= address.label :city %>:
+    <%= address.text_field :city %>
+
+    <%= address.label :state %>:
+    <%= address.text_field :state %>
+
+    <%= address.label :zip %>:
+    <%= address.text_field :zip %>
+
+  <% end %>
 <p>
   <%= f.submit "Submit" %>
 </p>
