--- a/app/views/profile/addresses/new.html.erb
+++ b/app/views/profile/addresses/new.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @address do |f| %>
+<%= form_for @address, url: profile_addresses_path do |f| %>
 
   <%= f.label :address %>
   <%= f.text_field :address %>
