--- a/app/views/users/_profile.erb
+++ b/app/views/users/_profile.erb
@@ -15,7 +15,7 @@
       </p>
       <p><%= link_to 'Edit Addresses', edit_address_path unless current_admin? %></p>
       <p><%= link_to 'All Addresses', address_index_path unless current_admin? %></p>
-      <p><%= link_to 'Add An Address', profile_addresses_path unless current_admin? %></p>
+      <p><%= link_to 'Add An Address' unless current_admin? %></p>
       <p><%= link_to 'Delete An Address', delete_address_path(@user.address), method: :delete unless current_admin? %></p>
   </aside>
   <p><%= link_to 'Edit Profile Data', edit_profile_path unless current_admin? %></p>
