--- a/app/views/users/_profile.erb
+++ b/app/views/users/_profile.erb
@@ -6,17 +6,17 @@
   <p>Role: <%= @user.role %></p>
   <aside id="address-details">
     <h3>Address:</h3>
-      <p><%= @user.address %></p>
+      <p><% @user.addresses.each do |address| %></p>
       <p>
-        <%= @user.city %>,
-        <%= @user.state %>
-        <%= @user.zip %>
-        <%= @user.address_nickname %>
+        <%= address.city %>,
+        <%= address.state %>
+        <%= address.zip %>
+        <%= address.nickname %>
+        <%= button_to "Delete Address", delete_address_path(address), method: :delete %>
+        <%= button_to "Edit Address", edit_address_path(address), method: :get %>
+      <% end %>
       </p>
-      <p><%= link_to 'Edit Addresses', edit_address_path unless current_admin? %></p>
-      <p><%= link_to 'All Addresses', address_index_path unless current_admin? %></p>
-      <p><%= link_to 'Add An Address' unless current_admin? %></p>
-      <p><%= link_to 'Delete An Address', delete_address_path(@user.address), method: :delete unless current_admin? %></p>
+      <p><%= link_to 'Add An Address', new_address_path unless current_admin? %></p>
   </aside>
   <p><%= link_to 'Edit Profile Data', edit_profile_path unless current_admin? %></p>
 </section>
